--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -1,11 +1,13 @@
-@import url("https://fonts.googleapis.com/css2?family=Barlow:wght@300;400;500;600;700;800;900&family=Lato:wght@300;400;700;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Barlow:wght@300;400;500;600;700;800;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap");
 
 :root {
   --black: #0e0e0e;
   --white: #ffffff;
   --white-grey: #c8c8c881;
   --grey: #939393;
-  --barlow-font: "Barlow", sans-serif;
+  --vollkorn-font: "Vollkorn", serif;
+  --nato-font: "Noto Sans", sans-serif;
 }
 
 * {
@@ -19,10 +21,18 @@ html {
 }
 
 body {
-  font-family: var(--barlow-font);
+  font-family: var(--vollkorn-font);
   font-size: 10px;
   color: var(--black);
   background-color: var(--white);
+}
+
+/* FONT FAMILY */
+.ff-nato {
+  font-family: var(--vollkorn-font);
+}
+.ff-vollkorn {
+  font-family: var(--nato-font);
 }
 
 /* font-weign */
@@ -133,6 +143,7 @@ h6 {
 p {
   font-size: 1rem;
   font-weight: 400;
+  font-family: var(--nato-font);
 }
 
 @media screen and (max-width: 700px) and (min-width: 550px) {
