--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,64 +1,28 @@
-/* Place the navbar at the bottom of the page, and make it stick */
-.navbar {
-  background-color: var(--black);
-  overflow: hidden;
-  position: fixed;
-  bottom: 0;
-  width: 100%;
+/* SECTION HERO */
+.section-hero-header {
+  min-height: 100svh;
 }
-
-.nav-elements {
-  display: flex;
-  flex-wrap: wrap;
-}
-
-/* Style the links inside the navigation bar */
-.navbar a {
-  color: #f2f2f2;
-  text-align: center;
-  padding: 1rem 2rem;
-  text-decoration: none;
-  font-size: 1rem;
-}
-
-/* Change the color of links on hover */
-.navbar a:hover {
-  background-color: #ddd;
-  color: black;
-}
-
-/* Add a color to the active/current link */
-.navbar a.active {
-  background-color: var(--white);
-  color: var(--black);
-}
-
-/* HERO HEADER */
-.section-hero {
-  background-color: var(--white);
-  max-width: 100vw;
-  overflow: hidden;
-}
-.h-100 {
-  height: 100%;
-}
-.hero-heading {
-  line-height: 3rem;
-  letter-spacing: -0.08rem;
-  font-weight: 700;
-}
-
 .hero-header {
-  min-height: 80vh;
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 4rem;
-  align-items: center;
-  justify-content: space-between;
+  grid-template-columns: 0.5fr 11.5fr;
 }
-
-.image img {
-  width: 100%;
-  border-radius: 1.2rem;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+.nav-bar {
+  background-color: var(--black);
+  height: 100svh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  /* align-items: space-between; */
+}
+.logo img {
+  max-width: 100%;
+  display: none;
+}
+.socials {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+  padding: 2rem 0;
 }
